--- a/app/src/main/res/layout/fragment_food_list.xml
+++ b/app/src/main/res/layout/fragment_food_list.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#BBB0DC">
 
 
 
@@ -117,7 +118,7 @@
 
 
         <ImageButton
-            android:id="@+id/toList"
+            android:id="@+id/toL"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/list"
