--- a/app/src/main/res/layout/fragment_test_again.xml
+++ b/app/src/main/res/layout/fragment_test_again.xml
@@ -45,6 +45,7 @@
 
 
 
+
     </LinearLayout>
 
     <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
@@ -56,22 +57,16 @@
 
 
 
-        <Button
-            android:id="@+id/toL"
+        <ImageButton
+            android:id="@+id/toList"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:drawableTop="@drawable/list"
-            android:background="@drawable/btn2"
+            android:src="@drawable/list"
             android:enabled="true"
             android:onClick="onClick"
+            android:background="@drawable/btn2"
             android:layout_weight="1"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:fontFamily="@font/font3"
-            android:textSize="15dp"
-            android:text="리스트"
-            android:textColor="#141414"
-
+            android:padding="5dp"
             />
 
 
@@ -79,61 +74,50 @@
 
 
 
-        <Button
+        <ImageButton
             android:id="@+id/toM"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:drawableTop="@drawable/user"
+            android:src="@drawable/user"
             android:background="@drawable/btn2"
             android:enabled="true"
-            android:onClick="onClick"
-            android:fontFamily="@font/font3"
-            android:textSize="15dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="마이페이지"
             android:layout_weight="1"
-            android:textColor="#141414" />
+            android:padding="5dp"/>
 
-
-
-        <Button
+        <ImageButton
             android:id="@+id/toH"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:drawableTop="@drawable/home"
+            android:src="@drawable/home"
             android:background="@drawable/btn2"
             android:enabled="true"
-            android:onClick="onClick"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="홈"
-            android:fontFamily="@font/font3"
-            android:textSize="15dp"
             android:layout_weight="1"
-            android:textColor="#141414" />
+            android:padding="5dp"/>
 
 
-
-
-
-        <Button
-            android:id="@+id/toR"
+        <ImageButton
+            android:id="@+id/toT"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:drawableTop="@drawable/erl"
+            android:src="@drawable/prefer"
             android:background="@drawable/btn2"
             android:enabled="true"
-            android:onClick="onClick"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="레시피등록"
-            android:fontFamily="@font/font3"
-            android:textSize="15dp"
             android:layout_weight="1"
-            android:textColor="#141414" />
+            android:padding="5dp"/>
 
 
+
+
+
+        <ImageButton
+            android:id="@+id/toE"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/erl"
+            android:background="@color/white"
+            android:enabled="true"
+            android:layout_weight="1"
+            android:padding="5dp"/>
 
     </LinearLayout>
 
